Cambiar nombre en el titulo de la pestaña

--- a/curriculum/templates/curriculum/datos_personales.html
+++ b/curriculum/templates/curriculum/datos_personales.html
@@ -1,6 +1,6 @@
 {% extends 'curriculum/base.html' %}
 
-{% block title %}Datos Personales | Valeria Meza{% endblock %}
+{% block title %}Datos Personales | Geovanny Delgado{% endblock %}
 
 {% block content %}
 <div class="fade-in max-w-7xl mx-auto pb-20 pt-10">
